

2008-1-27 Struan Robertson

  * Reaction.h:  Declare methods InitializeReaction and calcEquilibriumConstant 
  pure virtual, and associated changes.

2008-1-27 Struan Robertson

  * Reaction.h:  Move all public data to protected data, and concomitant changes.

_2008_04_04__14_25_39_ Chi-Hsiu Liang

  * renamed grnDensityOfStates() -> getGrainDensityOfStates()
  * Changed detailed balance on the cell level to the grain level
  * Corrected codes where DOS and rate coefficients are not referenced to the well bottom.
  * EAboveWell renamed to EAboveHill to reflect that this energy value is above the highest hilltop 
    but not the highest well bottom
  * Code for setting grain ZPE of all speices
  * Corrected getClassicalEnergy()
  * rename grnAvg() -> rateConstantGrnAvg()
  * put minEnergy in ReactionManager.cpp to ReactionManager.h as m_minEnergy
  * Add a short section in ReactionManager.cpp (Line 147 - 182) to set grain ZPE for all speices
  * setup basic constants and derived constants in Constants.h

_2008_03_27__14_49_28_ Chi-Hsiu Liang

  * Added a plugin class for Tunneling
  * Added getClassicalEnergy() for calculating classical electronic for molecules (without ZPE corrections)
  * Added a member m_Description in Molecule class for more detailed description of any molecule.
  * Added m_ImFreq for Tunneling parameter in TransitionState
  * Renamed BeyerSwinehart.h to convolution.h
  * Added EckartCoefficients.h (method for Tunneling )
  * Added condition loop (DOS only calculated once, other parameters updated in every loop).
  * Problem: If there are several conditions defined, it seems XML file only records the final calculated condition.

_2008_03_14__17_43_39_ Chi-Hsiu Liang

  * Concentrations and pressures are not directly interconvertable. They relate each other with temperature 
  and other factors. Inputting concentration by particles per cubic centimeter and converting it to mols is direct