@@ -1,4 +1,6 @@
+2008-4-17 David Glowacki
 
+  * EckartCoefficients.cpp:  add comments to clarify.
 
 2008-1-27 Struan Robertson
 
